Update and rename Saez_Profile.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <h3>Saez<span class="colored">Blog</span></h3>
       <ul>
-        <li><a href="./Saez_Profile.html">Profile</a></li>
+        <li><a href="./index.html">Profile</a></li>
         <li><a href="./Saez_gallery.html">Gallery</a></li>
         <li><a href="./Saez_hobbies.html">Hobbies</a></li>
         <li><a href="./Saez_artworks.html">Artworks</a></li>
