--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h3>Saez<span class="colored">Blog</span></h3>
       <div class="footer-wrapper">
         <ul class="footer-nav">
-          <li><a href="./Saez_Profile.html">Profile</a></li>
+          <li><a href="./index.html">Profile</a></li>
           <li><a href="./Saez_gallery.html">Gallery</a></li>
           <li><a href="./Saez_hobbies.html">Hobbies</a></li>
           <li><a href="./Saez_artworks.html">Artworks</a></li>
